--- a/public/teams/Teams.css
+++ b/public/teams/Teams.css
@@ -53,7 +53,7 @@ body{
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 .navbar{
-    margin-top:2rem;
+    margin-top: 0;
     border-color: var(--nav-border-color) !important;
 }
 .navbar__menu-item a {
